# pyaapalette

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  aa_palettes.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: drift-check.py  health-check.py  local-safety.py  push-guard.py  remote-safety.py  tmp-allow.py
data-raw/: README.md
src/aapalette/: __init__.py  _core.py  plotting.py
src/aapalette/data/: aa_palettes.json
tests/: test_palettes.py
