[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaapalette"
version = "0.1.0"
description = "Consistent, colour-vision-aware amino-acid colour palettes for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AApalette project" }]
keywords = ["bioinformatics", "amino acids", "colour", "color", "palette", "colorblind", "CVD"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.3"]
test = ["pytest>=7.0"]
dev = ["matplotlib>=3.3", "pytest>=7.0", "build"]

[project.urls]
Homepage = "https://github.com/aapalette/pyaapalette"
Source = "https://github.com/aapalette/pyaapalette"

[tool.hatch.build.targets.wheel]
packages = ["src/aapalette"]

[tool.hatch.build.targets.wheel.force-include]
"src/aapalette/data/aa_palettes.json" = "aapalette/data/aa_palettes.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/aapalette",
    "tests",
    "data-raw",
    "README.md",
    "LICENSE",
    "LICENSE-DATA",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
